# engine_project

./: .gitignore  .pre-commit-config.yaml  README.md  db.sqlite3  demo.py  manage.py  requirements.txt  setup.cfg
engine_project/: asgi.py  settings.py  urls.py  wsgi.py
order/: admin.py  apps.py  models.py  rules.py  serializers.py  tests.py  urls.py  views.py
order/management/commands/: seed_orders.py
order/migrations/: 0001_initial.py
