# Django project setup.cfg

[metadata]
name = engine_project
version = 0.1.0
description = Django backend for the project

[flake8]
max-line-length = 120
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,migrations,*.pyc,*.sqlite3,env,venv,.env
ignore = E203, W503, F401, F403, F405, E402, E501
per-file-ignores =
    __init__.py:F401
    manage.py:E402
    */migrations/*:E501

[isort]
profile = black
multi_line_output = 3
line_length = 120
known_first_party = engine_project
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
skip = migrations,__pycache__,build,dist,.git,.venv,venv,env

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
disallow_incomplete_defs = False
ignore_missing_imports = True
check_untyped_defs = True
disallow_untyped_decorators = False
disable_error_code = var-annotated

[mypy-django.*]
ignore_missing_imports = True

[mypy-*.migrations.*]
ignore_errors = True

[mypy-manage]
ignore_errors = True

[bandit]
exclude_dirs = tests,test,testing,migrations,docs
skips = B101, B105, B106, B107, B108

[tool:coverage.run]
source = engine_project
omit =
    */tests/*
    */migrations/*
    */__pycache__/*
    */venv/*
    */env/*
    manage.py

[tool:coverage.report]
exclude_lines =
    pragma: no cover
    def __str__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if settings.DEBUG
    if self.debug
